--- a/app/src/main/res/layout/category_list.xml
+++ b/app/src/main/res/layout/category_list.xml
@@ -24,6 +24,7 @@
             android:id="@+id/cat_name"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
+            android:fontFamily="@font/amethysta"
             android:text="Category Name"
             android:textAlignment="center"
             android:textStyle="bold"
