--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="pink">#FFC0CB</color>
     <color name="yellow">#FFFF00</color>
     <color name="orange">#e89607</color>
+    <color name="blue">#1b7ced</color>
 </resources>
