--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -153,7 +153,7 @@
                     android:layout_marginRight="8dp"
                     android:fontFamily="@font/amethysta"
                     android:text="See All"
-                    android:textColor="@color/orange"
+                    android:textColor="@color/pink"
                     android:textSize="18sp"
                     android:textStyle="bold" />
             </RelativeLayout>
