--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -10,7 +10,7 @@
         android:id="@+id/cardview"
         android:layout_width="350dp"
         android:layout_height="350dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="50dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:elevation="10dp"
@@ -38,12 +38,14 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="40dp">
 
             <TextView
                 android:id="@+id/detailed_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerVertical="true"
                 android:fontFamily="@font/overlock_black"
                 android:text="Product name"
                 android:textColor="@color/black"
@@ -54,16 +56,18 @@
                 style="?android:attr/ratingBarStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
                 android:layout_centerVertical="true"
-                android:numStars="5"/>
+                android:layout_alignParentRight="true"
+                android:numStars="5" />
 
         </RelativeLayout>
 
         <TextView
+            android:id="@+id/detailed_description"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="15dp"
             android:fontFamily="@font/overlock"
             android:text="@string/sample_description" />
 
@@ -73,6 +77,7 @@
             android:layout_marginTop="30dp">
 
             <TextView
+                android:id="@+id/detailed_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -88,7 +93,8 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:layout_width="200dp"
+                    android:id="@+id/btn_addToCart"
+                    android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginLeft="15dp"
