see all products

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -96,7 +96,7 @@
                         android:text="We provide best products." />
 
                     <TextView
-                        android:id="@+id/newProducts_see_all"
+                        android:id="@+id/new_see_all"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
@@ -155,7 +155,7 @@
                     android:text="See All"
                     android:textColor="@color/pink"
                     android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"/>
             </RelativeLayout>
 
             <androidx.recyclerview.widget.RecyclerView
