--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,9 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.HomeFragment">
-
-
+    tools:context=".fragments.HomeFragment"
+    android:layout_marginTop="10dp">
 
     <LinearLayout
         android:id="@+id/home_layout"
@@ -14,115 +13,74 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <com.denzcoskun.imageslider.ImageSlider
-            android:id="@+id/image_slider"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="220dp"
-            app:iss_auto_cycle="true"
-            app:iss_delay="0"
-            app:iss_period="1000" />
+            android:layout_height="150dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginHorizontal="25dp"
+            android:layout_marginBottom="15dp"
+            app:cardCornerRadius="20dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="9dp"
-            android:orientation="horizontal"
-            android:weightSum="2">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:fontFamily="@font/amethysta"
-                android:text="Category"
-                android:textSize="21sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/category_see_all"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
-                android:layout_weight="1"
-                android:fontFamily="@font/amethysta"
-                android:gravity="end"
-                android:text="See All"
-                android:textColor="@color/orange"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/dragonmaid"/>
+        </androidx.cardview.widget.CardView>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rec_category"
             android:layout_width="wrap_content"
-            android:layout_height="90dp"
-            android:layout_marginLeft="9dp"
-            android:layout_marginTop="10dp" />
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:layout_marginTop="10dp"
-            android:elevation="6dp"
-            app:cardCornerRadius="5dp">
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:id="@+id/new_product_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="9dp"
-                        android:fontFamily="@font/amethysta"
-                        android:text="New Products"
-                        android:textSize="21sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/new_product_name"
-                        android:layout_marginLeft="9dp"
-                        android:text="We provide best products." />
-
-                    <TextView
-                        android:id="@+id/new_see_all"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginRight="8dp"
-                        android:fontFamily="@font/amethysta"
-                        android:text="See All"
-                        android:textColor="@color/orange"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-                </RelativeLayout>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/new_product_rec"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="7dp"
-                    android:layout_marginTop="6dp"
-                    android:padding="5dp" />
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
+            android:layout_marginVertical="5dp"
+            android:layout_marginHorizontal="15dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginTop="10dp">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/new_product_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="25dp"
+                    android:fontFamily="@font/overlock_black"
+                    android:text="New Products"
+                    android:textColor="@color/black"
+                    android:textSize="22sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/new_see_all"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginRight="25dp"
+                    android:fontFamily="@font/overlock"
+                    android:text="See all"
+                    android:layout_alignParentBottom="true"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/new_product_rec"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_marginTop="15dp">
 
             <RelativeLayout
                 android:layout_width="wrap_content"
@@ -132,30 +90,24 @@
                     android:id="@+id/popular_products"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="9dp"
-                    android:fontFamily="@font/amethysta"
+                    android:layout_marginLeft="25dp"
+                    android:fontFamily="@font/overlock_black"
                     android:text="Popular Products"
-                    android:textSize="21sp"
+                    android:textColor="@color/black"
+                    android:textSize="22sp"
                     android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/popular_products"
-                    android:layout_marginLeft="9dp"
-                    android:text="We provide best products." />
 
                 <TextView
                     android:id="@+id/popular_see_all"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginRight="8dp"
-                    android:fontFamily="@font/amethysta"
-                    android:text="See All"
-                    android:textColor="@color/pink"
-                    android:textSize="18sp"
-                    android:textStyle="bold"/>
+                    android:layout_marginRight="25dp"
+                    android:fontFamily="@font/overlock"
+                    android:text="See all"
+                    android:layout_alignParentBottom="true"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
             </RelativeLayout>
 
             <androidx.recyclerview.widget.RecyclerView
@@ -163,8 +115,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_margin="7dp"
-                android:layout_marginTop="6dp"
+                android:layout_marginHorizontal="7dp"
                 android:padding="5dp" />
         </LinearLayout>
 
