--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/overlock_black"
-        android:text="Prodcut Detail"
+        android:text="Product Detail"
         android:layout_marginVertical="15dp"
         android:textSize="20sp"
         android:gravity="center"
