--- a/app/src/main/res/layout/activity_all_products.xml
+++ b/app/src/main/res/layout/activity_all_products.xml
@@ -25,16 +25,18 @@
         android:layout_marginVertical="15dp"
         android:textSize="20sp"
         android:gravity="center"
+        android:textColor="@color/grey"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/home_toolbar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -53,8 +55,8 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/product_rec"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_margin="7dp"
                 android:layout_marginTop="6dp"
                 android:layout_gravity="center_horizontal"
