--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -23,6 +23,7 @@
         android:layout_marginVertical="15dp"
         android:textSize="20sp"
         android:gravity="center"
+        android:textColor="@color/grey"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -68,7 +69,7 @@
                 android:layout_alignParentBottom="true"
                 android:fontFamily="@font/overlock_black"
                 android:text="0đ"
-                android:textColor="@color/orange"
+                android:textColor="@color/pink"
                 android:textSize="28sp" />
         </RelativeLayout>
 
@@ -83,6 +84,6 @@
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="17sp"
-            app:backgroundTint="@color/orange" />
+            app:backgroundTint="@color/pink" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
