--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -8,62 +8,65 @@
     android:orientation="vertical"
     android:gravity="center">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/home_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/white"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="120dp">
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_margin="15dp"
-            android:textSize="20sp"
+            android:layout_height="30dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginHorizontal="15dp"
             android:fontFamily="@font/overlock_bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:text="Select a location:"/>
+            android:text="Select a location:"
+            android:textSize="25sp" />
 
         <Spinner
             android:id="@+id/locationSpinner"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:padding="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/textView3"
             android:background="@android:drawable/btn_dropdown"
-            android:spinnerMode="dropdown"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textView3"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:spinnerMode="dropdown" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/textView3"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintWidth_percent="0.2"
-            android:layout_margin="15dp"
-            android:textSize="20sp"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="15dp"
             android:fontFamily="@font/overlock_bold"
-            android:text="Address:"/>
+            android:text="Address:"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/addressText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/textView3"
-            app:layout_constraintStart_toEndOf="@id/textView4"
-            app:layout_constrainedWidth="true"
-            app:layout_constraintWidth_percent="0.7"
-            app:layout_constraintHorizontal_bias="0"
-            android:layout_margin="15dp"
-            android:textSize="20sp"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="15dp"
+            android:layout_toRightOf="@+id/textView4"
             android:fontFamily="@font/overlock_bold"
-            android:text="None"/>
+            android:text="227 Nguyen Van Cu, Phuong 4, Quan 5, TPHCM"
+            android:textSize="20sp" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </RelativeLayout>
 
     <fragment
         android:id="@+id/map"
