--- a/app/src/main/res/layout/category_large.xml
+++ b/app/src/main/res/layout/category_large.xml
@@ -3,9 +3,9 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="160dp"
-    android:layout_height="280dp"
+    android:layout_height="240dp"
     android:layout_margin="15dp"
-    app:cardCornerRadius="5dp">
+    app:cardCornerRadius="20dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -16,6 +16,7 @@
             android:id="@+id/cat_img"
             android:layout_width="160dp"
             android:layout_height="180dp"
+            android:scaleType="fitEnd"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -25,12 +26,15 @@
             android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:fontFamily="@font/amethysta"
+            android:fontFamily="@font/overlock_black"
+            android:textColor="@color/black"
+            android:gravity="center"
+            android:textSize="20sp"
             android:text="Category Name"
-            android:textAlignment="center"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cat_img" />
+            app:layout_constraintTop_toBottomOf="@+id/cat_img"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
