--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,17 +15,17 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="120dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginHorizontal="25dp"
             android:layout_marginBottom="15dp"
-            app:cardCornerRadius="20dp">
+            app:cardCornerRadius="10dp">
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/dragonmaid"/>
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"
+                android:src="@drawable/spy_x_family_1"/>
         </androidx.cardview.widget.CardView>
 
     <LinearLayout
@@ -57,6 +57,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_marginRight="25dp"
                 android:fontFamily="@font/overlock"
+                android:textColor="@color/grey"
                 android:text="See all"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -96,10 +97,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
                     android:layout_marginRight="25dp"
                     android:fontFamily="@font/overlock"
+                    android:textColor="@color/grey"
                     android:text="See all"
-                    android:layout_alignParentBottom="true"
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </RelativeLayout>
@@ -137,10 +139,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
                     android:layout_marginRight="25dp"
                     android:fontFamily="@font/overlock"
+                    android:textColor="@color/grey"
                     android:text="See all"
-                    android:layout_alignParentBottom="true"
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </RelativeLayout>
