--- a/app/src/main/res/layout/my_cart_item.xml
+++ b/app/src/main/res/layout/my_cart_item.xml
@@ -60,7 +60,7 @@
             android:text="34.400đ"
             android:textSize="17sp"
             android:fontFamily="@font/overlock_black"
-            android:textColor="@color/orange"
+            android:textColor="@color/pink"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
