--- a/app/src/main/res/layout/product_large.xml
+++ b/app/src/main/res/layout/product_large.xml
@@ -19,8 +19,8 @@
 
         <ImageView
             android:id="@+id/new_img"
-            android:layout_width="160dp"
-            android:layout_height="180dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:src="@drawable/milk" />
 
@@ -39,8 +39,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView2"
-        app:layout_constraintBottom_toTopOf="@+id/new_price"/>
+        app:layout_constraintTop_toBottomOf="@+id/cardView2"/>
 
 
     <TextView
@@ -49,13 +48,12 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/overlock_black"
         android:text="34.400đ"
-        android:textColor="@color/orange"
+        android:textColor="@color/pink"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/new_product_name"/>
+        app:layout_constraintStart_toStartOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
