--- a/app/src/main/res/layout/products.xml
+++ b/app/src/main/res/layout/products.xml
@@ -29,7 +29,7 @@
         android:id="@+id/new_product_name"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/overlock_black"
         android:text="Product Name"
         android:textColor="@color/black"
@@ -37,8 +37,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView2"
-        app:layout_constraintBottom_toTopOf="@+id/new_price"/>
+        app:layout_constraintTop_toBottomOf="@+id/cardView2"/>
 
 
     <TextView
@@ -46,14 +45,14 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/overlock_black"
+        android:layout_marginBottom="10dp"
         android:text="34.400đ"
-        android:textColor="@color/orange"
+        android:textColor="@color/pink"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/new_product_name"/>
+        app:layout_constraintStart_toStartOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
