--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="pink">#FFC0CB</color>
+    <color name="pink">#ed189f</color>
     <color name="yellow">#FFFF00</color>
     <color name="orange">#e89607</color>
     <color name="blue">#1b7ced</color>
+    <color name="grey">#f788ce</color>
 </resources>
