--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="orange">#e89607</color>
     <color name="blue">#1b7ced</color>
     <color name="grey">#f788ce</color>
+    <color name="faded">#beedec</color>
 </resources>
