--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,6 +2,9 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/amethysta</item>
+        <item>@font/baloo</item>
+        <item>@font/carter_one</item>
+        <item>@font/chela_one</item>
         <item>@font/overlock</item>
         <item>@font/overlock_black</item>
         <item>@font/overlock_bold</item>
