--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,10 +32,10 @@
         android:layout_marginHorizontal="25dp"
         android:id="@+id/search"
         android:background="@drawable/bg_search_rounded"
-        android:layoutDirection="rtl"
         app:queryBackground="@android:color/transparent"
         app:iconifiedByDefault="false"
-        app:layout_constraintTop_toBottomOf="@id/home_toolbar"/>
+        app:layout_constraintTop_toBottomOf="@id/home_toolbar"
+        android:focusable="false"/>
 
     <FrameLayout
         android:id="@+id/home_container"
