--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,11 +30,13 @@
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginHorizontal="25dp"
+        android:layout_marginBottom="5dp"
         android:id="@+id/search"
         android:background="@drawable/bg_search_rounded"
         app:queryBackground="@android:color/transparent"
         app:iconifiedByDefault="false"
         app:layout_constraintTop_toBottomOf="@id/home_toolbar"
+        app:layout_constraintBottom_toTopOf="@+id/home_container"
         android:focusable="false"/>
 
     <FrameLayout
