--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="grey">#f788ce</color>
     <color name="faded">#beedec</color>
     <color name="night">#263463</color>
+    <color name="dark_pink">#a13161</color>
 </resources>
