--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -111,6 +111,7 @@
             android:layout_height="100dp"
             android:layout_marginTop="15dp"
             android:fontFamily="@font/overlock"
+            android:scrollbars = "vertical"
             android:text="@string/sample_description" />
     </LinearLayout>
 
