--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
         android:layout_marginBottom="5dp"
         android:id="@+id/search"
         android:background="@drawable/bg_search_rounded"
-        android:text="Search for products"
+        android:text="@string/searchHint"
         android:gravity="center"
         android:fontFamily="@font/overlock"
         app:layout_constraintTop_toBottomOf="@id/home_toolbar"
