--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,17 @@
         app:layout_constraintBottom_toTopOf="@+id/home_container"
         android:focusable="false"/>
 
+    <ImageView
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginRight="30dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintTop_toBottomOf="@id/home_toolbar"
+        app:layout_constraintBottom_toTopOf="@+id/home_container"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/search"/>
+
     <FrameLayout
         android:id="@+id/home_container"
         android:layout_width="0dp"
