--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,11 +12,28 @@
         android:id="@+id/home_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"/>
+        android:background="@color/white"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/textview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/overlock_black"
+        android:text="Maps"
+        android:layout_marginVertical="15dp"
+        android:textSize="20sp"
+        android:gravity="center"
+        android:textColor="@color/grey"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <RelativeLayout
+        android:id="@+id/relative"
         android:layout_width="match_parent"
-        android:layout_height="120dp">
+        android:layout_height="120dp"
+        app:layout_constraintTop_toBottomOf="@+id/home_toolbar">
 
         <TextView
             android:id="@+id/textView3"
@@ -32,12 +49,12 @@
 
         <Spinner
             android:id="@+id/locationSpinner"
-            android:layout_width="wrap_content"
+            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
-
             android:layout_alignParentTop="true"
+            android:layout_marginRight="15dp"
             android:layout_toRightOf="@+id/textView3"
-            android:background="@android:drawable/btn_dropdown"
             android:spinnerMode="dropdown" />
 
         <TextView
@@ -76,6 +93,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        tools:context=".activities.MapsActivity" />
+        tools:context=".activities.MapsActivity"
+        app:layout_constraintTop_toBottomOf="@+id/relative"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
