--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="faded">#beedec</color>
     <color name="night">#263463</color>
     <color name="dark_pink">#a13161</color>
+    <color name="red">#bd0f0f</color>
 </resources>
