--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,15 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/menu_cart"
-        android:title="Cart"
-        android:icon="@drawable/cart2"
-        app:showAsAction="always" />
-
-    <item
-        android:id="@+id/map"
-        android:title="map"
-        android:icon="@drawable/map"
-        app:showAsAction="always"/>
+        android:id="@+id/cart"
+        android:actionLayout="@layout/cart"
+        android:title="cart"
+        app:showAsAction="always">
+    </item>
 
 </menu>
