--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -41,11 +41,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/home_toolbar">
 
-        <ImageView
-            android:id="@+id/detailed_img"
-            android:layout_width="350dp"
-            android:layout_height="350dp"
-            android:src="@drawable/milk" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/detailed_img"
+                android:layout_width="350dp"
+                android:layout_height="350dp"
+                android:src="@drawable/milk" />
+
+            <ImageView
+                android:id="@+id/detailed_favorite"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:src="@drawable/touch"
+                android:layout_alignTop="@id/detailed_img"
+                android:layout_alignRight="@id/detailed_img"
+                android:layout_margin="10dp"/>
+
+        </RelativeLayout>
+
+
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
