--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -28,6 +28,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <ImageView
+        android:id="@+id/detailed_favorite"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="5dp"
+        android:src="@drawable/icons8_favorite_64"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cardview"
         android:layout_width="350dp"
@@ -41,26 +50,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/home_toolbar">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/detailed_img"
-                android:layout_width="350dp"
-                android:layout_height="350dp"
-                android:src="@drawable/milk" />
-
-            <ImageView
-                android:id="@+id/detailed_favorite"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:src="@drawable/touch"
-                android:layout_alignTop="@id/detailed_img"
-                android:layout_alignRight="@id/detailed_img"
-                android:layout_margin="10dp"/>
-
-        </RelativeLayout>
+        <ImageView
+            android:id="@+id/detailed_img"
+            android:layout_width="350dp"
+            android:layout_height="350dp"
+            android:src="@drawable/milk" />
 
 
     </androidx.cardview.widget.CardView>
