--- a/app/src/main/res/layout/product_large.xml
+++ b/app/src/main/res/layout/product_large.xml
@@ -17,32 +17,24 @@
         app:layout_constraintBottom_toTopOf="@+id/new_product_name"
         app:cardCornerRadius="15dp">
 
-        <RelativeLayout
+        <ImageView
+            android:id="@+id/new_img"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/new_img"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/milk" />
-
-            <ImageView
-                android:id="@+id/product_favorite"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_alignTop="@id/new_img"
-                android:layout_alignRight="@id/new_img"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="10dp"
-                android:src="@drawable/touch" />
-
-        </RelativeLayout>
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/milk" />
 
     </androidx.cardview.widget.CardView>
+
+    <ImageView
+        android:id="@+id/product_favorite"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/icons8_favorite_64"
+        app:layout_constraintEnd_toEndOf="@+id/new_price"
+        app:layout_constraintTop_toTopOf="@id/new_price"
+        app:layout_constraintBottom_toBottomOf="@id/new_price"
+        app:layout_constraintVertical_bias="1"/>
 
 
     <TextView
@@ -51,7 +43,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:fontFamily="@font/overlock_black"
-        android:text="Product Name"
+        android:text="Product \nName"
+        android:maxLines="2"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -71,7 +64,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
