--- a/app/src/main/res/layout/category_large.xml
+++ b/app/src/main/res/layout/category_large.xml
@@ -2,7 +2,7 @@
 
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="160dp"
+    android:layout_width="match_parent"
     android:layout_height="180dp"
     android:layout_margin="15dp"
     app:cardCornerRadius="20dp">
@@ -14,7 +14,7 @@
 
         <ImageView
             android:id="@+id/cat_img"
-            android:layout_width="160dp"
+            android:layout_width="match_parent"
             android:layout_height="140dp"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
@@ -23,7 +23,7 @@
 
         <TextView
             android:id="@+id/cat_name"
-            android:layout_width="160dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:fontFamily="@font/overlock_black"
